# selfatlas-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  entries.py  recall.py  router.py
app/core/: config.py  llm.py  security.py
app/db/: mongo.py  pinecone.py
app/models/: entry.py  user.py
app/schemas/: auth.py  entry.py  recall.py
app/services/: embedding.py  emotion.py  recall.py
