[project]
name = "selfatlas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-text-splitters>=1.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",

   # Web Framework
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",

    # MongoDB
    "motor==3.7.0",
    "beanie==1.29.0",

    # Pinecone
    "pinecone==6.0.0",

    # Auth & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",  
    
    # Config
    "pydantic[email]==2.11.1",
    "pydantic-settings>=2.10.1",
    "email-validator==2.2.0",
]
